<resources>
    <string name="app_name">Finnbogi</string>
    <string name="button_week_last">Síðasta vika</string>
    <string name="button_week_next">Næsta vika</string>
    <string name="app_description">Vaktaskipulags kerfi</string>
    <string name="login_username">Notandanafn</string>
    <string name="login_password">Lykilorð</string>
    <string name="login_submit">Innskrá</string>
    <string name="shift_make_title">Ný Vakt</string>
    <string name="shift_make_cancel">Hætta við</string>
    <string name="shift_make_confirm">Staðfesta</string>
    <string name="shift_make_date">Dagsetning</string>
    <string name="shift_make_startTime">Upphafstími</string>
    <string name="shift_make_endTime">Lokatími</string>
    <string name="shift_make_roleText">Tegund vaktar</string>
    <string name="shift_make_employeeText">Starfsmaður</string>
    <string name="shift_title">Vakt</string>
    <string name="shift_offer">Bjóða vakt</string>
    <string name="user_info_title">Persónuupplýsingar</string>
    <string name="user_info_apply_changes">Staðfesta</string>
    <string name="user_make_title">Nýr starfsmaður</string>
    <string name="user_make_cancel">Hætta við</string>
    <string name="user_make_confirm">Staðfesta</string>
    <string name="logo_desc">Finnbogi logo</string>
    <string name="user_list_title">Starfsmenn</string>
    <string name="notification_list_title">Tilkynningar</string>
    <string name="shiftexchange_title">Vaktaskipti</string>
    <string name="shiftexchange_list_title">Öll vaktaskipti</string>
    <string name="shiftexchange_list_status_0">Laus</string>
    <string name="shiftexchange_list_status_1">Beðið staðfestingar</string>
    <string name="shiftexchange_get_rid_off">Vakt í boði</string>
    <string name="shiftexchange_offer">Bjóða</string>
    <string name="shiftexhange_to_offer">Vakt til að bjóða á móti</string>
    <string name="make_user_role">Starfsheiti:</string>
    <string name="make_user_admin">Admin:</string>
    <string name="shift_list_title">Vaktalisti</string>
    <string name="dialog_confirm">Staðfesta</string>
    <string name="dialog_cancel">Hætta við</string>
    <string name="shift_list_dialog_message">Ertu viss um að þú viljir eyða þessari vakt?</string>
    <string name="shift_list_dialog_title">Eyða vakt</string>
    <string name="user_list_dialog_message">Ertu viss um að þú viljir eyða þessum starfsmanni</string>
    <string name="user_list_dialog_title">Eyða starfsmanni</string>
    <string name="shiftexchange_list_mylist_title">Mín vaktaskipti</string>
    <string name="shiftexchange_adminlist_title">Tilbúin vaktaskipti</string>
    <string name="shiftexchange_pending_myshift">Vaktin mín</string>
    <string name="shiftexchange_pending_offeredshift">Vakt boðið á móti</string>
    <string name="shiftexchange_confirmable_vakt1">Vakt 1</string>
    <string name="shiftexchange_confirmable_vakt2">Vakt 2</string>
    <string name="activity_error">Activity error</string>
    <string name="activity_success">Activity success</string>
    <string name="service_error">Service error</string>
    <string name="service_success">Service success</string>
    <string name="login_activity_wrong_name_or_password">Notendanafn eða lykilorð rangt</string>
    <string name="makeuser_activity_success">Tókst að búa til notanda</string>
    <string name="makeuser_activity_fail">Ekki tókst að búa til notanda</string>
    <string name="shiftexchange_activity_offer_success">Tókst að bjóða vakt á móti</string>
    <string name="shiftexchange_activity_offer_fail">Ekki gekk að bjóða vakt á móti</string>
    <string name="shiftexchange_activity_offer_declined_success">Boði hafnað</string>
    <string name="shiftexchange_activity_offer_declined_fail">Ekki gekk að hafna boði</string>
    <string name="shiftexchange_activity_offer_accept_success">Boð samþykkt</string>
    <string name="shiftexchange_activity_offer_accept_fail">Ekki gekk að samþykkja boð</string>
    <string name="shiftexchange_activity_declined_success">Vaktaskiptum hafnað</string>
    <string name="shiftexchange_activity_declined_fail">Ekki gekk að hafna vaktaskiptum</string>
    <string name="shiftexchange_activity_confirm_success">Vaktaskipti samþykkt</string>
    <string name="shiftexchange_activity_confirm_fail">Ekki gekk að samþykkja vaktaskipti</string>
    <string name="shiftexchangelist_activity_pending">Búið hefur verið að bjóða vakt á móti þessari vakt</string>
    <string name="shiftexchangelist_activity_different_role">Þú getur ekki tekið þessa vakt</string>
    <string name="shift_activity_createexchange_success">Tókst að búa til vaktaskipti</string>
    <string name="shift_activity_createexchange_fail">Ekki tókst að búa til vaktaskipti</string>
    <string name="user_list_delete">Eyða</string>
    <string name="shift_activity_notification_title">Vakt laus til skiptana</string>
    <string name="shift_activity_notification_text">Ný vakt hefur verið boðin til skiptana sem þú gætir átt möguleika á að taka</string>
    <string name="shiftexchange_list_activity_still_upforgrab">Enginn hefur boðið þér vakt á móti ennþá</string>
    <string name="shiftexchange_list_activity_still_confirmable">Beðið eftir svari frá stjórnanda</string>
    <string name="shiftexchange_activity_notification_offered_title">Þér hefur verið boðið vakt á móti til skiptana</string>
    <string name="shiftexchange_activity_notification_offered_text">Þér hefur verið boðið vakt til skiptana við þína vakt</string>
    <string name="shiftexchange_activity_notification_pending_fail_title">Boðinu þínu var hafnað</string>
    <string name="shiftexchange_activity_notification_pending_fail_text">Boðinu þínu um vakt til skiptana var hafnað af notanda</string>
    <string name="shiftexchange_activity_notification_pending_success_title">Boðið þitt var samþykkt</string>
    <string name="shiftexchange_activity_notification_pending_success_text">Boðið þitt um vakt til skiptana var samþykkt af notanda. Nú er beðið samþykkis stjórnanda</string>
    <string name="shiftexchange_activity_notification_confirmable_fail_title">Vaktaskiptum hafnað</string>
    <string name="shiftexchange_activity_notification_confirmable_fail_text">Vaktaskiptunum var hafnað. Ef þú þarft ennþá að losna við þessa vakt þá geturu prufað að bjóða vaktina aftur lausa til skiptana.</string>
    <string name="shiftexchange_activity_notification_confirmable_success_title">Vaktaskipti samþykkt</string>
    <string name="shiftexchange_activity_notification_confirmable_success_text">Vaktaskiptin voru samþykkt. Þú getur nú séð nýju vaktina þína á vaktaplaninu.</string>
    <string name="menu_notifications">Tilkynningar</string>
    <string name="menu_shiftlist">Vaktalisti</string>
    <string name="menu_makeshift">Búa til vakt</string>
    <string name="menu_userlist">Notendalisti</string>
    <string name="menu_myinfo">Mínar upplýsingar</string>
    <string name="menu_makeuser">Búa til nýjan notanda</string>
    <string name="menu_shiftexchangelist">Vaktaskiptalisti</string>
    <string name="menu_logout">Skrá mig út</string>
    <string name="channel_name">FinnbogiChannel</string>
    <string name="channel_description">Notification channel for finnbogi app</string>
    <string name="userinfo_submit_success">Tókst að uppfæra upplýsingar</string>
</resources>