<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_shift_list"
        android:title="@string/menu_shiftlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_make_shift"
        android:title="@string/menu_makeshift"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_user_list"
        android:title="@string/menu_userlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_user_info"
        android:title="@string/menu_myinfo"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_make_user"
        android:title="@string/menu_makeuser"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_shiftexchange_list"
        android:title="@string/menu_shiftexchangelist"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>