<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeShiftActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/shift_make_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/shift_make_date"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="@string/shift_make_date"
            android:background="@drawable/black_white_border"
            android:layout_margin="8dp"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/shift_make_startTime"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="@string/shift_make_startTime"
            android:background="@drawable/black_white_border"
            android:layout_margin="8dp"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/shift_make_endTime"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="@string/shift_make_endTime"
            android:background="@drawable/black_white_border"
            android:layout_margin="8dp"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_make_roleText"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/shift_make_role"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/black_white_border"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_make_employeeText"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/shift_make_employee"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/black_white_border"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:gravity="bottom">

        <Button
            android:id="@+id/shift_make_cancel"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="24dp"
            android:text="@string/shift_make_cancel" />

        <Button
            android:id="@+id/shift_make_confirm"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginHorizontal="24dp"
            android:text="@string/shift_make_confirm" />


    </LinearLayout>

</LinearLayout>