<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeUserActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/user_make_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:gravity="center">

        <EditText
            android:id="@+id/user_make_firstname"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="Fornafn"
            android:background="@drawable/black_white_border"
            android:gravity="center"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/user_make_surname"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="Eftirnafn"
            android:background="@drawable/black_white_border"
            android:gravity="center"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/user_make_address"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="Heimilisfang"
            android:background="@drawable/black_white_border"
            android:gravity="center"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/user_make_phone"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="Sími"
            android:background="@drawable/black_white_border"
            android:gravity="center"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/user_make_email"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="Netfang"
            android:background="@drawable/black_white_border"
            android:gravity="center"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/user_make_ssn"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="Kennitala"
            android:background="@drawable/black_white_border"
            android:gravity="center"
            android:layout_marginVertical="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24sp"
        android:layout_weight="0.1"
        android:gravity="bottom">

        <Button
            android:id="@+id/user_make_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:text="@string/user_make_cancel"/>

        <Button
            android:id="@+id/user_make_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:text="@string/user_make_confirm"/>

    </LinearLayout>


</LinearLayout>